# comp3011-cw1-api

./: .env.example  .gitignore  README.md  TECHNICAL_REPORT.html  TECHNICAL_REPORT.md  TECHNICAL_REPORT_DRAFT.md  VERIFICATION_INSTRUCTIONS.md  debug_auth.py  implementation_plan.md  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  task.md  walkthrough.md  wsgi.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 290a4b3ac4a5_add_is_admin_to_user.py  3c98546c383c_init.py  5b216861ccd7_add_user_model.py  7ddf4996c868_add_provenance_fields_to_importrun.py  8c8851f64d1d_add_event_ownership.py  a63fd328dcf6_add_novel_data_integration_tables.py  b1f6d6cb5d7d_add_attendee_ownership.py
app/: crud.py  main.py  models.py  schemas.py
app/api/: admin.py  analytics.py  routes.py
app/core/: auth.py  config.py  db.py  exceptions.py  (+2 more)
docs/: API_DOCUMENTATION.html  API_DOCUMENTATION.md  DATASET_SOURCE.md  GENAI_EXPORT_LOGS.html  GENAI_EXPORT_LOGS.md  PRESENTATION_OUTLINE.md  PRESENTATION_SLIDES.pptx  appendix_genai_logs.md
scripts/: build_submission_zip.sh  clean_db.py  clean_release.sh  import_dataset.py  make_admin.py  quality_check.sh  sample_events_dataset.csv  smoke_test.sh  verify_submission.sh
tests/: conftest.py  test_admin.py  test_admin_errors.py  test_admin_security.py  test_analytics.py  test_attendees.py  test_auth.py  test_dataset_provenance.py  test_etags.py  test_events.py  test_headers_security.py  test_health.py  test_import.py  test_middleware.py  test_ownership.py  test_rate_limit_spec.py  test_rsvps.py
(+1 files in other folders)
