[project]
name = "comp3011-cw1-api"
version = "1.0.0"
description = "Event & RSVP Management API – COMP3011 Coursework"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]
"alembic/versions/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
explicit_package_bases = true
exclude = ["alembic/", "venv/", "\\.venv/"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "alembic"]
